Shift image to under post heading and fix image attributes

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -59,3 +59,11 @@ div {
 	max-width: 500px;
 	background-color: #FFFFFF;
 }
+
+// Makes sure the image on the post card on the list of 
+// blog posts is not too big and is centred
+.card-image {
+	max-width: 500px;
+	margin-left:auto;
+	margin-right:auto;
+}
